--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <figure>
+        <a href="#"><img src="Assets/unpluggedlogo.png" alt="unplugged logo"></a>
+      </figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -99,6 +101,9 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
       <article>
+        <figure>
+          <img src="assets/omar-lopez-296944-unsplash.jpg" alt="Group at an outdoor retreat.">
+        </figure>
         <div>
           <h3>LaCrue Bottling Co. October 2018</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
