--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <a href="#"><img src="../Assets/unpluggedlogo.png" alt="unplugged logo"></a>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -54,7 +54,9 @@
     </section>
     <!--contact info-->
     <section class="map">
-      <figure> </figure>
+      <figure> 
+         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.7118503872016!2d-73.98910648490511!3d40.702343379332994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a33e27d5035%3A0x155d5b662b4ec4b8!2s100%20Front%20St%2C%20Brooklyn%2C%20NY%2011201!5e0!3m2!1sen!2sus!4v1662574283524!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </figure>
     </section>
     <section class="contact-section">
       <div class="content-wrapper">
