--- a/faq/index.html
+++ b/faq/index.html
@@ -30,7 +30,9 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
+      <figure>
       <a href="#"><img src="../Assets/unpluggedlogo.png" alt="unplugged logo"></a>
+      </figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
