--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
+          <li><a href="faq/index.html">FAQ</a></li>
+          <li><a href="about/index.html">About</a></li>
         </ul>
       </nav>
     </div>
@@ -71,27 +71,33 @@
         <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
       <div class="features-items">
         <article>
-          <i class="fas fa-campground"></i>
+          <p class="fontawesome-icon">
+          <i class="fas fa-campground"></i></p>
           <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
         </article>
         <article>
-          <i class="fas fa-bed"></i>
+          <p class="fontawesome-icon">
+          <i class="fas fa-bed"></i></p>
           <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
         </article>
         <article>
-          <i class="fas fa-utensils"></i>
+          <p class="fontawesome-icon">
+          <i class="fas fa-utensils"></i></p>
           <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
         </article>
         <article>
-          <i class="fas fa-shoe-prints"></i>
+          <p class="fontawesome-icon">
+          <i class="fas fa-shoe-prints"></i></p>
           <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
         </article>
         <article>
-          <i class="fas fa-smile"></i>
+          <p class="fontawesome-icon">
+          <i class="fas fa-smile"></i></p>
           <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
         </article>
         <article>
-          <i class="fas fa-wifi"></i>
+          <p class="fontawesome-icon">
+          <i class="fas fa-wifi"></i></p>
           <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
         </article>
       </div> 
